--- a/ECommerceWebsite/items/item1/item3.html
+++ b/ECommerceWebsite/items/item1/item3.html
@@ -27,9 +27,9 @@
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item1/tshirtBlue.jpg" alt="picture of a shirt">
+                 src="../../images/item1/tshirtBlue.png" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item1/tshirtBlue.jpg')"></div>
+                 style="background-image: url('../../images/item1/tshirtBlue.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -48,31 +48,31 @@
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2"
-                                         src="../../images/item1/tshirtBlack.jpg">
+                                         src="../../images/item1/tshirtBlack.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
                                     <img class="itemImg" id="itemDisplay3" style="border-color: red"
-                                         src="../../images/item1/tshirtBlue.jpg">
+                                         src="../../images/item1/tshirtBlue.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
                                     <img class="itemImg" id="itemDisplay4"
-                                         src="../../images/item1/tshirtGreen.jpg">
+                                         src="../../images/item1/tshirtGreen.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item5.html">
                                     <img class="itemImg" id="itemDisplay5"
-                                         src="../../images/item1/tshirtGrey.jpg">
+                                         src="../../images/item1/tshirtGrey.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item6.html">
                                     <img class="itemImg" id="itemDisplay6"
-                                         src="../../images/item1/tshirtRed.jpg">
+                                         src="../../images/item1/tshirtRed.png">
                                 </a>
                             </li>
                         </ul>
