--- a/ECommerceWebsite/items/item3/item4.html
+++ b/ECommerceWebsite/items/item3/item4.html
@@ -27,9 +27,9 @@
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item3/longsleeveOrange.jpg" alt="picture of a shirt">
+                 src="../../images/item3/longsleeveOrange.png" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item3/longsleeveOrange.jpg')"></div>
+                 style="background-image: url('../../images/item3/longsleeveOrange.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -42,31 +42,31 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1"
-                                         src="../../images/item3/longsleeveWhite.jpg">
+                                         src="../../images/item3/longsleeveWhite.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2"
-                                         src="../../images/item3/longsleeveBlack.jpg">
+                                         src="../../images/item3/longsleeveBlack.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
                                     <img class="itemImg" id="itemDisplay3"
-                                         src="../../images/item3/longsleeveBlue.jpg">
+                                         src="../../images/item3/longsleeveBlue.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
                                     <img class="itemImg" id="itemDisplay4" style="border-color: red"
-                                         src="../../images/item3/longsleeveOrange.jpg">
+                                         src="../../images/item3/longsleeveOrange.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item5.html">
                                     <img class="itemImg" id="itemDisplay5"
-                                         src="../../images/item3/longsleeveRed.jpg">
+                                         src="../../images/item3/longsleeveRed.png">
                                 </a>
                             </li>
                         </ul>
