--- a/ECommerceWebsite/items/item4/item2.html
+++ b/ECommerceWebsite/items/item4/item2.html
@@ -27,9 +27,9 @@
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item4/longsleeveVneckBlack.jpg" alt="picture of a shirt">
+                 src="../../images/item4/longsleeveVneckBlack.png" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item4/longsleeveVneckBlack.jpg')"></div>
+                 style="background-image: url('../../images/item4/longsleeveVneckBlack.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -42,13 +42,13 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1"
-                                         src="../../images/item4/longsleeveVneckWhite.jpg">
+                                         src="../../images/item4/longsleeveVneckWhite.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2" style="border-color: red"
-                                         src="../../images/item4/longsleeveVneckBlack.jpg">
+                                         src="../../images/item4/longsleeveVneckBlack.png">
                                 </a>
                             </li>
                         </ul>
