--- a/ECommerceWebsite/items/item5/item1.html
+++ b/ECommerceWebsite/items/item5/item1.html
@@ -27,9 +27,9 @@
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item5/hoodieWhite.jpg" alt="picture of a shirt">
+                 src="../../images/item5/hoodieWhite.png" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item5/hoodieWhite.jpg')"></div>
+                 style="background-image: url('../../images/item5/hoodieWhite.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -42,25 +42,25 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1" style="border-color: red"
-                                         src="../../images/item5/hoodieWhite.jpg">
+                                         src="../../images/item5/hoodieWhite.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2"
-                                         src="../../images/item5/hoodieBlack.jpg">
+                                         src="../../images/item5/hoodieBlack.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
                                     <img class="itemImg" id="itemDisplay3"
-                                         src="../../images/item5/hoodieGrey.jpg">
+                                         src="../../images/item5/hoodieGrey.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
                                     <img class="itemImg" id="itemDisplay4"
-                                         src="../../images/item5/hoodieMaroon.jpg">
+                                         src="../../images/item5/hoodieMaroon.png">
                                 </a>
                             </li>
                         </ul>
