--- a/ECommerceWebsite/items/item6/item3.html
+++ b/ECommerceWebsite/items/item6/item3.html
@@ -27,9 +27,9 @@
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item6/jerseyYellow.jpg" alt="picture of a shirt">
+                 src="../../images/item6/jerseyPink.png" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item6/jerseyYellow.jpg')"></div>
+                 style="background-image: url('../../images/item6/jerseyPink.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -42,25 +42,25 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1"
-                                         src="../../images/item6/jerseyBlack.jpg">
+                                         src="../../images/item6/jerseyBlack.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2"
-                                         src="../../images/item6/jerseyGreen.jpg">
+                                         src="../../images/item6/jerseyGreen.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
                                     <img class="itemImg" id="itemDisplay3" style="border-color: red"
-                                         src="../../images/item6/jerseyYellow.jpg">
+                                         src="../../images/item6/jerseyPink.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
                                     <img class="itemImg" id="itemDisplay4"
-                                         src="../../images/item6/jerseyRed.jpg">
+                                         src="../../images/item6/jerseyRed.png">
                                 </a>
                             </li>
                         </ul>
