--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -34,9 +34,9 @@
 		</td>
 		<td> <!-- [0][1]-->
           <div class="image_thumbnail">
-            <!--<a href="item.html?Item_Color=images/item2/vneckBlack.jpg">-->
+            <!--<a href="item.html?Item_Color=images/itvneckBlack.png.jpg">-->
             <a href="items/item2/item1.html">
-			  <img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
+			  <img class="image_thumbnail" src="images/item2/vneckBlack.png" alt="V-Neck Shirt">
 			</a>
 		  </div>
 		  <div class="items-name">
@@ -48,9 +48,9 @@
 		</td>
 		<td> <!-- [0][2]-->
           <div class="image_thumbnail">
-		    <!--<a href="item.html?Item_Color=images/item3/longsleeveBlack.jpg">-->
+		    <!--<a href="item.html?Item_Color=images/itlongsleeveBlack.png.jpg">-->
             <a href="items/item3/item1.html">
-			  <img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-sleeved Shirt">
+			  <img class="image_thumbnail" src="images/item3/longsleeveBlack.png" alt="Long-sleeved Shirt">
 			</a>
 		  </div>
 		  <div class="items-name">
@@ -62,9 +62,9 @@
 		</td>
         <td> <!-- [0][3]-->
           <div class="image_thumbnail">
-		    <!--<a href="item.html?Item_Color=images/item4/longsleeveVneckBlack.jpg">-->
+		    <!--<a href="item.html?Item_Color=images/itlongsleeveVneckBlack.png.jpg">-->
             <a href="items/item4/item1.html">
-			  <img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
+			  <img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.png" alt="Long-sleeved V-Neck Shirt">
 			</a>
 		  </div>
 		  <div class="items-name">
@@ -78,9 +78,9 @@
       <tr>
 		<td> <!-- [1][0]-->
           <div class="image_thumbnail">
-			<!--<a href="item.html?Item_Color=images/item5/hoodieBlack.jpg">-->
+			<!--<a href="item.html?Item_Color=images/ithoodieBlack.png.jpg">-->
             <a href="items/item5/item1.html">
-			  <img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
+			  <img class="image_thumbnail" src="images/item5/hoodieBlack.png" alt="Hooded Shirt">
 			</a>
 		  </div>
 		  <div class="items-name">
@@ -92,9 +92,9 @@
 		</td>
 		<td> <!-- [1][1]-->
           <div class="image_thumbnail">
-		    <!--<a href="item.html?Item_Color=images/item6/jerseyBlack.jpg">-->
+		    <!--<a href="item.html?Item_Color=images/itjerseyBlack.png.jpg">-->
             <a href="items/item6/item1.html">
-			  <img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
+			  <img class="image_thumbnail" src="images/item6/jerseyBlack.png" alt="Jersey Shirt">
 			</a>
 		  </div>
 		  <div class="items-name">
