--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -25,96 +25,107 @@
     <div class="itemName">
         <h2> White Shirt</h2>
     </div>
+
     <div class="productContainer">
-        <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-             src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
-        <div id="overlay" onmousemove="zoomIn(event)"
-             style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
+        <div >
+            <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
+                 src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
+            <div id="overlay" onmousemove="zoomIn(event)"
+                 style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
+        </div>
 
-        <ul class="itemCategories">
-            <li class="productList">
-                <div class="productListChoice">
-                    <h3>Choose a design:</h3>
-                </div>
+        <div class="showProduct1">
+            <ul class="itemCategories">
+                <li class="productList">
+                    <div class="productListChoice">
+                        <h3>Choose a design:</h3>
+                    </div>
 
-                <div class="list">
+                    <div class="list">
+                        <ul class="boxList">
+                            <li class="itemList">
+                                <a class="items" href="item1.html">
+                                    <img class="itemImg" id="whiteShirt" style="border-color: red"
+                                         src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item2.html">
+                                    <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.png">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item3.html">
+                                    <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.png">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item4.html">
+                                    <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.png">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item5.html">
+                                    <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.png">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item6.html">
+                                    <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.png">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="sizeList">
+                    <div class="sizeChoice">
+                        <h3>Choose a Size:</h3>
+                    </div>
                     <ul class="boxList">
-                        <li class="itemList">
-                            <a class="items" href="item1.html">
-                                <img class="itemImg" id="whiteShirt" style="border-color: red"
-                                     src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
-                            </a>
+                        <li>
+                            <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
                         </li>
-                        <li class="itemList">
-                            <a class="items" href="item2.html">
-                                <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
-                            </a>
+                        <li>
+                            <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
                         </li>
-                        <li class="itemList">
-                            <a class="items" href="item3.html">
-                                <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
-                            </a>
+                        <li>
+                            <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
                         </li>
-                        <li class="itemList">
-                            <a class="items" href="item4.html">
-                                <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
-                            </a>
+                        <li>
+                            <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
                         </li>
-                        <li class="itemList">
-                            <a class="items" href="item5.html">
-                                <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
-                            </a>
+                        <li>
+                            <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
                         </li>
-                        <li class="itemList">
-                            <a class="items" href="item6.html">
-                                <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
-                            </a>
+                        <li>
+                            <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
+                        </li>
+                        <li>
+                            <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
                         </li>
                     </ul>
-                </div>
-            </li>
-
-            <li class="sizeList">
-                <div class="sizeChoice">
-                    <h3>Choose a Size:</h3>
-                </div>
-                <ul class="boxList">
-                    <li>
-                        <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
-                    </li>
-                    <li>
-                        <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
-                    </li>
-                    <li>
-                        <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
-                    </li>
-                    <li>
-                        <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
-                    </li>
-                    <li>
-                        <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
-                    </li>
-                    <li>
-                        <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
-                    </li>
-                    <li>
-                        <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div >
 
         <div id="btnContainer">
             <p id="cost"> $10.00 </p>
             <input id="btn" type="button" value= "BUY NOW"
                    onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg', 'Plain White T-Shirt')" />
         </div>
+
+        <div class="descriptionContainer">
+            <h3 id="descriptionHeader"> Description</h3>
+            <p id="descriptionContent"> this is the details of a plain white shirt </p>
+        </div>
     </div>
 
-    <div class="descriptionContainer">
-        <h3 id="descriptionHeader"> Description</h3>
-        <p id="descriptionContent"> this is the details of a plain white shirt </p>
-    </div>
+
+
+
+
+
 </div>
 </body>
 </html>
@@ -168,7 +179,7 @@
                                       <tr>
                                           <td><img class="item-swatches" src="../../images/item1/tshirtWhite.jpg"></td>
                                           <td><img class="item-swatches" src="../../images/item1/tshirtBlack.jpg"></td>
-                                          <td><img class="item-swatches" src="../../images/item1/tshirtBlue.jpg"></td>
+                                          <td><img class="item-swatches" src="../../images/ittshirtBlue.png.jpg"></td>
                                       </tr>
                                   </table>
                               </div>
@@ -235,22 +246,22 @@
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
-                                    <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
+                                    <img class="itemImg" id="blueShirt"src="../../images/ittshirtBlue.png.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
-                                    <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
+                                    <img class="itemImg" id="greenShirt" src="../../images/ittshirtGreen.png.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item5.html">
-                                    <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
+                                    <img class="itemImg" id="greyShirt" src="../../images/ittshirtGrey.png.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item6.html">
-                                    <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
+                                    <img class="itemImg" id="redShirt" src="../../images/ittshirtRed.png.jpg">
                                 </a>
                             </li>
                         </ul>
