--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -28,10 +28,9 @@
     </div>
     <div class="productContainer">
         <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-             src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
+             src="../../images/item1/tshirtWhite.png" alt="picture of a shirt">
         <div id="overlay" onmousemove="zoomIn(event)"
-             style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
-
+             style="background-image: url('../../images/item1/tshirtWhite.png')"> </div>
         <ul class="itemCategories">
             <li class="productList">
                 <div class="productListChoice">
@@ -43,32 +42,32 @@
                         <li class="itemList">
                             <a class="items" href="item1.html">
                                 <img class="itemImg" id="whiteShirt" style="border-color: red"
-                                     src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
+                                     src="../../images/item1/tshirtWhite.png">
                             </a>
                         </li>
                         <li class="itemList">
                             <a class="items" href="item2.html">
-                                <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
+                                <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.png">
                             </a>
                         </li>
                         <li class="itemList">
                             <a class="items" href="item3.html">
-                                <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
+                                <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.png">
                             </a>
                         </li>
                         <li class="itemList">
                             <a class="items" href="item4.html">
-                                <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
+                                <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.png">
                             </a>
                         </li>
                         <li class="itemList">
                             <a class="items" href="item5.html">
-                                <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
+                                <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.png">
                             </a>
                         </li>
                         <li class="itemList">
                             <a class="items" href="item6.html">
-                                <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
+                                <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.png">
                             </a>
                         </li>
                     </ul>
