--- a/ECommerceWebsite/items/item1/item6.html
+++ b/ECommerceWebsite/items/item1/item6.html
@@ -43,7 +43,7 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1"
-                                         src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
+                                         src="../../images/item1/tshirtWhite.png">
                                 </a>
                             </li>
                             <li class="itemList">
