--- a/ECommerceWebsite/items/item1/item4.html
+++ b/ECommerceWebsite/items/item1/item4.html
@@ -113,7 +113,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item1/tshirtGreen.jpg', 'Plain Green T-shirt')" />
+                       onclick="buyItem('images/item1/tshirtGreen.png', 'Plain Green T-shirt')" />
             </div>
         </div>
 
