--- a/ECommerceWebsite/items/item2/item1.html
+++ b/ECommerceWebsite/items/item2/item1.html
@@ -107,7 +107,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item2/vneckWhite.jpg', 'Plain White VNeck T-shirt')" />
+                       onclick="buyItem('images/item2/vneckWhite.png', 'Plain White VNeck T-shirt')" />
             </div>
         </div>
 
