--- a/ECommerceWebsite/items/item3/item3.html
+++ b/ECommerceWebsite/items/item3/item3.html
@@ -107,7 +107,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item3/longsleeveBlue.jpg', 'Plain Long-sleeves Blue Shirt')" />
+                       onclick="buyItem('images/item3/longsleeveBlue.png', 'Plain Long-sleeves Blue Shirt')" />
             </div>
         </div>
 
