--- a/ECommerceWebsite/items/item3/item4.html
+++ b/ECommerceWebsite/items/item3/item4.html
@@ -107,7 +107,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item3/longsleeveOrange.jpg', 'Plain Long-sleeves Orange Shirt')" />
+                       onclick="buyItem('images/item3/longsleeveOrange.png', 'Plain Long-sleeves Orange Shirt')" />
             </div>
         </div>
 
