--- a/ECommerceWebsite/items/item4/item1.html
+++ b/ECommerceWebsite/items/item4/item1.html
@@ -89,7 +89,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item4/longsleeveVneckWhite.jpg', 'Plain Long-sleeves White V-Neck Shirt')" />
+                       onclick="buyItem('images/item4/longsleeveVneckWhite.png', 'Plain Long-sleeves White V-Neck Shirt')" />
             </div>
         </div>
 
