--- a/ECommerceWebsite/items/item6/item2.html
+++ b/ECommerceWebsite/items/item6/item2.html
@@ -101,7 +101,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item6/jerseyGreen.jpg', 'Jersey Green')" />
+                       onclick="buyItem('images/item6/jerseyGreen.png', 'Jersey Green')" />
             </div>
         </div>
 
