--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../css/items.css">
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
     <script type="text/javascript" src="../../js/item.js"></script>
@@ -30,7 +29,8 @@
         <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
              src="../../images/item1/tshirtWhite.png" alt="picture of a shirt">
         <div id="overlay" onmousemove="zoomIn(event)"
-             style="background-image: url('../../images/item1/tshirtWhite.png')"> </div>
+             style="background-image: url('../../images/item1/tshirtWhite.png')"></div>
+
         <ul class="itemCategories">
             <li class="productList">
                 <div class="productListChoice">
@@ -107,7 +107,7 @@
         <div id="btnContainer">
             <p id="cost"> $10.00 </p>
             <input id="btn" type="button" value= "BUY NOW"
-                   onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg', 'Plain White T-Shirt')" />
+                   onclick="buyItem('images/item1/tshirtWhite.png', 'Plain White T-Shirt')" />
         </div>
     </div>
 
@@ -118,3 +118,192 @@
 </div>
 </body>
 </html>
+
+
+<!--<!DOCTYPE html>
+<html lang="en" id="item-background">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../css/item.css">
+    <script type="text/javascript" src="../../js/item.js"></script>
+    <title>Plain White T-shirt</title>
+</head>
+
+<body>
+  <div class="item-container">
+      <div class="item-logo">
+          <h1>Clothing Couture</h1>
+      </div>
+      <hr>
+
+      <div class="item-navigation">
+          <a class="userOption" href="../../items_list.html"> Home </a>
+      </div>
+      <hr>
+
+      <div class="item-contents">
+          <div class="item-name">Plain T-Shirt</div>
+          <div class="item-table">
+              <table>
+                  <tr>
+                      <th rowspan="3">
+                          <img src="../../images/item1/tshirtWhite.jpg">
+                      </th>
+                      <td>
+                          <div class="item-description">
+                              <p>Description</p>
+                              <ul>
+                                  <li>4.2 oz</li>
+                                  <li>100% combed ring-spun cotton</li>
+                              </ul>
+                          </div>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>  <
+                          <div class="item-categories">
+                              <p>Available Colors</p>
+                              <div class="item-colors">
+                                  <table margin: 0px auto;>
+                                      <tr>
+                                          <td><img class="item-swatches" src="../../images/item1/tshirtWhite.jpg"></td>
+                                          <td><img class="item-swatches" src="../../images/item1/tshirtBlack.jpg"></td>
+                                          <td><img class="item-swatches" src="../../images/item1/tshirtBlue.jpg"></td>
+                                      </tr>
+                                  </table>
+                              </div>
+                              <div class="item-sizes">
+                                  <p>Available Sizes</p>
+                                  <ul class="boxList">
+                                      <li>
+                                          <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
+                                      </li>
+                                      <li>
+                                          <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
+                                      </li>
+                                      <li>
+                                          <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
+                                      </li>
+                                  </ul>
+                              </div>
+                          </div>
+
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                          <div class="item-buy-now-btn">
+                              <input id="buy-btn" type="button" value= "BUY NOW"
+                                     onclick="buyItem('../../images/item1/tshirtWhite.jpg', 'Plain White Shirt')" />
+                          </div>
+                      </td>
+                  </tr>
+              </table>
+          </div>
+      </div>
+  </div>
+
+
+    <div class="pageContainer">
+        <div class="itemName">
+            <h3>White Shirt</h3>
+        </div>
+        <div class="productContainer">
+            <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
+                 src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
+            <div id="overlay" onmousemove="zoomIn(event)"
+                 style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
+
+            <ul class="itemCategories">
+                <li class="productList">
+                    <div class="productListChoice">
+                       <h3>Choose a design:</h3>
+                    </div>
+
+                    <div class="list">
+                        <ul class="boxList">
+                            <li class="itemList">
+                                <a class="items" href="item1.html">
+                                    <img class="itemImg" id="whiteShirt" style="border-color: red"
+                                         src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item2.html">
+                                    <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item3.html">
+                                    <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item4.html">
+                                    <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item5.html">
+                                    <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <a class="items" href="item6.html">
+                                    <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+        <li class="sizeList">
+            <div class="sizeChoice">
+               <h3>Choose a Size:</h3>
+            </div>
+            <ul class="boxList">
+                <li>
+                    <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
+                </li>
+                <li>
+                    <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
+                </li>
+                <li>
+                    <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
+                </li>
+                <li>
+                    <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
+                </li>
+                <li>
+                    <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
+                </li>
+                <li>
+                    <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
+                </li>
+                <li>
+                    <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+
+            <div id="btnContainer">
+                <p id="cost"> $10.00 </p>
+                <input id="btn" type="button" value= "BUY NOW"
+                       onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg', 'Plain White Shirt')" />
+           </div>
+        </div>
+
+        <div class="descriptionContainer">
+            <h3 id="descriptionHeader"> Description</h3>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
+        </div>
+    </div>
+</body>
+</html>-->
+
+
+
+
+
+
