--- a/ECommerceWebsite/items/item2/item2.html
+++ b/ECommerceWebsite/items/item2/item2.html
@@ -107,7 +107,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item2/vneckBlack.jpg', 'Plain Black V-Neck T-shirt')" />
+                       onclick="buyItem('images/item2/vneckBlack.png', 'Plain Black V-Neck T-shirt')" />
             </div>
         </div>
 
