--- a/ECommerceWebsite/items/item2/item3.html
+++ b/ECommerceWebsite/items/item2/item3.html
@@ -73,41 +73,41 @@
                         </ul>
                     </div>
                 </li>
-            </ul>
-        <li class="sizeList">
-            <div class="sizeChoice">
-                <h3>Choose a Size:</h3>
-            </div>
-            <ul class="boxList">
-                <li>
-                    <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
-                </li>
-                <li>
-                    <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
-                </li>
-                <li>
-                    <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
-                </li>
-                <li>
-                    <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
-                </li>
-                <li>
-                    <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
-                </li>
-                <li>
-                    <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
-                </li>
-                <li>
-                    <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+
+            <li class="sizeList">
+                <div class="sizeChoice">
+                    <h3>Choose a Size:</h3>
+                </div>
+                <ul class="boxList">
+                    <li>
+                        <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
+                    </li>
+                    <li>
+                        <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
+                    </li>
+                    <li>
+                        <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
+                    </li>
+                    <li>
+                        <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
+                    </li>
+                    <li>
+                        <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
+                    </li>
+                    <li>
+                        <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
+                    </li>
+                    <li>
+                        <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
 
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item2/vneckYellow.jpg', 'Plain Yellow V-Neck T-shirt')" />
+                       onclick="buyItem('images/item2/vneckYellow.png', 'Plain Yellow V-Neck T-shirt')" />
             </div>
         </div>
 
