--- a/ECommerceWebsite/items/item4/item2.html
+++ b/ECommerceWebsite/items/item4/item2.html
@@ -89,7 +89,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item4/longsleeveVneckBlack.jpg', 'Plain Long-sleeves Black V-Neck Shirt')" />
+                       onclick="buyItem('images/item4/longsleeveVneckBlack.png', 'Plain Long-sleeves Black V-Neck Shirt')" />
             </div>
         </div>
 
