--- a/ECommerceWebsite/items/item5/item4.html
+++ b/ECommerceWebsite/items/item5/item4.html
@@ -101,7 +101,7 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item5/hoodieMaroon.jpg', 'Maroon Hoodie')" />
+                       onclick="buyItem('images/item5/hoodieMaroon.png', 'Maroon Hoodie')" />
             </div>
         </div>
 
