Changed description of plain white tshirt in item1/item1.html Deleted commented codes at the bottom of item1/item1.html Added website's url in README.html Added contributor names in about.html

--- a/ECommerceWebsite/about.html
+++ b/ECommerceWebsite/about.html
@@ -18,7 +18,7 @@
 	<p>We want to help you feel better by looking better. Our business was established in 2017. Our goal is to
 		sell stylish, high-quality clothes that are also comfortable and easy for our customers to wear.</p>
     <p>We appreciate your business.</p>
-	<p>-- Clothing Couture Team</p>
+	<p>-- Clothing Couture Team (Irish Marquez and Calvin Poon)</p>
   </div>
   <hr>
 
