--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -22,7 +22,7 @@
           <div class="image_thumbnail">
 			  <a href="items/item1/item1.html">
               <!--<a href="item.html?Item_Color=images/item1/tshirtBlack.jpg">-->
-			    <img class="image_thumbnail" src="images/item1/tshirtWhite.png" alt="T-Shirt">
+			    <img class="image_thumbnail" src="images/item1/tshirtWhite.png=" alt="T-Shirt">
 			  </a>
 		  </div>
 		  <div class="items-name">
