--- a/ECommerceWebsite/buyItem.html
+++ b/ECommerceWebsite/buyItem.html
@@ -23,7 +23,7 @@
 
 
         <div class="form">
-            <form method="post" name="userInfo" onsubmit="checkForm()">
+            <form method="post" action="mailto:panteater@uci.edu?subject=Order Place" name="userInfo" onsubmit="checkForm()">
                 <label for="mail">
                     Quantity:
                     <input id="quantity" type="text" name="quantity" size="3" value=1 onkeyup="updateTotal()"> <br>
